# project-2_Shchepilov_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  demo1.cast  demo2.cast  diag_run.py  pyproject.toml
data/: users.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
