[tool.poetry]
name = "project-2-shchepilov-m25-555"
version = "0.1.0"
description = "CLI JSON database with CRUD operations, decorators and caching"
authors = ["sh1v <sh1vvv@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.scripts]
project = "primitive_db.main:main"
database = "primitive_db.main:main"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []